[package]
name = "tokio-tut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
mini-redis = "0.4"
bytes = "1"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
console-subscriber = "0.1.8"
